fix(byline): hide on mobile viewports

--- a/src/components/pages/blog/byline.module.scss
+++ b/src/components/pages/blog/byline.module.scss
@@ -10,6 +10,10 @@
     display: inline-flex;
     align-items: flex-start;
 
+    @media (max-width: $viewport-sm) {
+      display: none;
+    }
+
     img {
       width: 40px;
       height: 40px;
